Add YouTube channel link to funding options

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['https://send.monobank.ua/jar/7J3SBAYW92']
+custom: ['https://send.monobank.ua/jar/7J3SBAYW92', 'https://www.youtube.com/channel/UCAki0WWEoCPVeu3Juz2L3yQ/join']
